# squish-api-python-extension

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  HISTORY.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: build-publish-doc.yml
docs/: index.md
docs/reference/: object_tree.md  report.md  settings.md  squishserver.md  video.md  vps.md
reference/object_tree/: index.html
reference/report/: index.html
reference/settings/: index.html
reference/squishserver/: index.html
reference/video/: index.html
reference/vps/: index.html
search/: search_index.json
sqape-report/: pyproject.toml
sqape-report/sqape/: messages.py  vps.py
squape/: __init__.py  object_tree.py  report.py  settings.py  squishserver.py  video.py  vps.py
squape-report/: README.md  pyproject.toml
squape-report/squape/: messages.py  report.py  vps.py
squape/internal/: exceptions.py
