# squape-report/pyproject.toml

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["squape"]
namespaces = false

[project]
name = "squape"
version = "0.1.0"
authors = [
    { name="Cyber Alpaca", email="contact@cyberalpaca.com" },
]
requires-python = ">=3.8"
readme = "README.md"
description = "Reporting Utilities for the Squish GUI Tester"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CyberAlpaca/squish-api-python-extension"
"Cyber Alpaca" = "https://cyberalpaca.com"